--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "farmers-investors-connect-frontend",
+  "name": "My-Portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://AbdoulNuru.github.io/My-Portfolio",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -21,6 +22,8 @@
     "typewriter-effect": "^2.18.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -50,6 +53,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.0.5"
   }
 }
